--- a/templates/proj/result.html.twig
+++ b/templates/proj/result.html.twig
@@ -11,10 +11,6 @@
 
     {{ include('flash.html.twig') }}
 
-    <h4 class="results">
-        {{ result }}
-    </h4>
-
     <div class="container">
         <div class="frame">
             <div class="table">
@@ -26,36 +22,29 @@
                     <p>
                         Dealer
                     </p>
-
                     {% for card in dealerHand %}
-                        {% if card is defined and card is not empty %}
-                            <div class="card {{
-                                card.getSuit() == 'H' or card.getSuit() == 'D'
-                                    ? 'red'
-                                    : 'black'
-                                }}">
-                                <span class="rank">{{ card.getRank() }}</span>
-                                <span class="suit top">
-                                    {{ card.getSuitSymbol() }}
-                                </span>
-                                <span class="suit bottom">
-                                    {{ card.getSuitSymbol() }}
-                                </span>
-                            </div>
-                        {% else %}
-                            {# Handle the case when card is not an object (e.g., it's a string or null) #}
-                            <div class="card error">
-                                <span class="bg">
-                                    <span class="rank">Err</span>
-                                </span>
-                            </div>
-                        {% endif %}
+                        <div class="card {{
+                            card.getSuit() == 'H' or card.getSuit() == 'D'
+                                ? 'red'
+                                : 'black'
+                            }}">
+                            <span class="rank">{{ card.getRank() }}</span>
+                            <span class="suit top">
+                                {{ card.getSuitSymbol() }}
+                            </span>
+                            <span class="suit bottom">
+                                {{ card.getSuitSymbol() }}
+                            </span>
+                        </div>
                     {% endfor %}
                 </div>
 
-                <div class="player">
-                    {% for card in playerHand %}
-                        {% if card is defined and card is not empty %}
+                {% for handResult in playerHandsResults %}
+                    <div class="player">
+                        <p>
+                            Player Hand {{ handResult.handIndex }}
+                        </p>
+                        {% for card in handResult.cards %}
                             <div class="card {{
                                 card.getSuit() == 'H' or card.getSuit() == 'D'
                                     ? 'red'
@@ -69,19 +58,12 @@
                                     {{ card.getSuitSymbol() }}
                                 </span>
                             </div>
-                        {% else %}
-                            {# Handle the case when card is not an object (e.g., it's a string or null) #}
-                            <div class="card error">
-                                <span class="bg">
-                                    <span class="rank">Err</span>
-                                </span>
-                            </div>
-                        {% endif %}
-                    {% endfor %}
-                    <p>
-                        You
-                    </p>
-                </div>
+                        {% endfor %}
+                        <p>
+                            Result: {{ handResult.result }}
+                        </p>
+                    </div>
+                {% endfor %}
             </div>
         </div>
 
