--- a/templates/proj/deal.html.twig
+++ b/templates/proj/deal.html.twig
@@ -17,7 +17,8 @@
         <div class="frame">
             <div class="table">
                 <div class="logo">
-                    JackDash™
+                    JackDash™<br />
+                    <span>${{ app.session.get('bj_bet') ?? 'x' }}</span>
                 </div>
 
                 {# Dealer's hand #}
@@ -109,7 +110,7 @@
                 Current Bet: $<span id="displayedBet">{{ app.session.get(
                         'bj_bet'
                     )
-                        ?? 10 }}</span>
+                        ?? 'x' }}</span>
             </h5>
             <p>
                 Your Balance: ${{ playerMoney }}
