--- a/templates/proj.html.twig
+++ b/templates/proj.html.twig
@@ -34,6 +34,7 @@
                 <ul>
                     <li><a href="{{ path('proj') }}">Start</a></li>
                     <li><a href="{{ path('proj_about') }}">About</a></li>
+                    <li><a href="{{ path('proj_reset') }}">Reset</a></li>
                 </ul>
             </nav>
         </header>
