--- a/templates/proj/index.html.twig
+++ b/templates/proj/index.html.twig
@@ -8,6 +8,9 @@
     <h1>
         JackDash™
     </h1>
+
+    {{ include('flash.html.twig') }}
+
     <div class="container">
         <div class="frame">
             <div class="table">
