--- a/templates/proj.html.twig
+++ b/templates/proj.html.twig
@@ -23,11 +23,7 @@
     <body>
         <header class="shadowed">
             <div class="site-header"
-                style="background-image: url({{
-                asset(
-                    'img/background.jpg'
-                )
-                }})">
+                style="background-image: url({{ asset('img/bg2.jpg') }})">
                 <span class="site-title">proj mvc</span>
             </div>
             <nav>
